--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <!-- Header Content -->
             <div class="container header-content text-center">
                 <div class="header-content-logo">
-                    <img src="../assets/kandatsu-logo-white.png" alt="Kandatsu Kogen Ski Resort" title="Kandatsu Kogen Ski Resort">
+                    <img src="/assets/kandatsu-logo-white.png" alt="Kandatsu Kogen Ski Resort" title="Kandatsu Kogen Ski Resort">
                 </div>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minima accusamus sed delectus libero porro natus tenetur provident, <br />
                     consectetur nesciunt nisi obcaecati et consequatur earum accusantium doloribus repellat. Ea, soluta in!</p>
