--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Kandatsu Kogen Ski Resort</title>
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <!-- inject css -->
-        <link rel="stylesheet" href="css/style-8c819d7150.css" />
+        <link rel="stylesheet" href="css/style-91397014a9.css" />
         <!-- <link href="//www.snow-forecast.com/stylesheets/feed.css" media="screen" rel="stylesheet" type="text/css" /><div id="wf-weatherfeed"></div> -->
     </head>
 
@@ -45,7 +45,7 @@
             <!-- Header Content -->
             <div class="container header-content text-center">
                 <div class="header-content-logo">
-                    <img src="../assets/kandatsu-logo-white.png" alt="Kandatsu Kogen Ski Resort" title="Kandatsu Kogen Ski Resort">
+                    <img src="assets/kandatsu-logo-white.png" alt="Kandatsu Kogen Ski Resort" title="Kandatsu Kogen Ski Resort">
                 </div>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minima accusamus sed delectus libero porro natus tenetur provident, <br />
                     consectetur nesciunt nisi obcaecati et consequatur earum accusantium doloribus repellat. Ea, soluta in!</p>
@@ -84,6 +84,6 @@
             </div>
         </section>
         <!-- inject js -->
-        <script src="js/bundle-ac0896f013.js"></script>
+        <script src="js/bundle-e8b2e749f7.js"></script>
     </body>
 </html>
